--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -2,6 +2,9 @@ body {
   overflow-x: hidden;
   min-height: 100vh;
 }
+.wap-container {
+  background-image: url(../img/bg.png);
+}
 .wap-container .banner {
   height: 107.0667vw;
   background-image: url(../img/banner.png);
@@ -12,7 +15,7 @@ body {
 }
 .wap-container .nav-wrap .nav-list {
   position: relative;
-  width: 111.8vw;
+  width: 112vw;
   height: 8.2667vw;
   background: url(../img/nav_bg.png) repeat;
   overflow-x: auto;
@@ -108,6 +111,346 @@ body {
 }
 .wap-container #part1 .content .next {
   right: -1.111vw;
+  background: url(../img/next.png) no-repeat;
+  background-size: 100%;
+}
+.wap-container #part2 {
+  position: relative;
+  width: 100vw;
+  height: 89.6vw;
+  background: url(../img/part2_bg.png) no-repeat;
+  background-size: 100%;
+}
+.wap-container #part2 .content {
+  position: absolute;
+  top: 30.6667vw;
+  left: 2vw;
+  width: 96.4vw;
+  height: 53.5vw;
+}
+.wap-container #part2 .content .slide-box {
+  width: 100%;
+  height: 100%;
+}
+.wap-container #part2 .content .slide-box ul li {
+  position: relative;
+  width: 96.4vw;
+  height: 53.5vw;
+}
+.wap-container #part2 .content .slide-box ul li img {
+  width: 100%;
+  height: 100%;
+}
+.wap-container #part2 .content .slide-box ul li .info {
+  position: absolute;
+  bottom: 5.3333vw;
+  left: 50%;
+  margin-left: -40vw;
+  width: 80vw;
+  height: 15.9333vw;
+  background-image: url(../img/part2_text_bg.png);
+}
+.wap-container #part2 .content .slide-box ul li .info .title {
+  padding: 2vw 2vw 1vw 2vw;
+  height: 6vw;
+  line-height: 6vw;
+  font-size: 20px;
+  font-weight: bolder;
+  text-align: center;
+}
+.wap-container #part2 .content .slide-box ul li .info .text {
+  padding: 0 5vw;
+  height: 6.3332vw;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.wap-container #part2 .content .back,
+.wap-container #part2 .content .next {
+  position: absolute;
+  top: 50%;
+  height: 5.7333vw;
+  width: 7.6vw;
+  margin-top: -2.8666vw;
+}
+.wap-container #part2 .content .back {
+  left: -1.111vw;
+  background: url(../img/back.png) no-repeat;
+  background-size: 100%;
+}
+.wap-container #part2 .content .next {
+  right: -1.111vw;
+  background: url(../img/next.png) no-repeat;
+  background-size: 100%;
+}
+.wap-container #part2 .content .pc-slide-ctr {
+  width: 100%;
+  text-align: center;
+  padding-top: 4px;
+  font-size: 14px;
+}
+.wap-container #part2 .content .pc-slide-ctr i {
+  display: inline-block;
+  width: 2.1333vw;
+  height: 2.1333vw;
+  background: url(../img/part2_slide_default.png) center no-repeat;
+  cursor: pointer;
+}
+.wap-container #part2 .content .pc-slide-ctr .current {
+  background-image: url(../img/part2_slide_current.png);
+}
+.wap-container #part3 {
+  position: relative;
+  width: 100vw;
+  height: 139.2vw;
+  background: url(../img/part3_bg.png) no-repeat;
+  background-size: 100%;
+}
+.wap-container #part3 .content {
+  position: absolute;
+  top: 38.6667vw;
+  left: 8.6667vw;
+  width: 91.3333vw;
+  height: 75.3333vw;
+}
+.wap-container #part3 .content .slide-container {
+  display: none;
+  float: left;
+  position: relative;
+  width: 39.6vw;
+  height: 75.4667vw;
+}
+.wap-container #part3 .content .slide-container:nth-child(1) {
+  display: block;
+}
+.wap-container #part3 .content .slide-container .slide-box {
+  height: 100%;
+}
+.wap-container #part3 .content .slide-container .slide-box ul {
+  height: 100%;
+}
+.wap-container #part3 .content .slide-container .slide-box .slide-div {
+  width: 39.6vw;
+  height: 75.4667vw;
+}
+.wap-container #part3 .content .slide-container .slide-box .slide-div .slide-div-item {
+  float: left;
+  width: 39.6vw;
+  height: 75.4667vw;
+}
+.wap-container #part3 .content .slide-container .slide-box .slide-div .slide-div-item a {
+  display: inline-block;
+}
+.wap-container #part3 .content .slide-container .slide-box .slide-div .slide-div-item a img {
+  width: 39.6vw;
+  height: 75.4667vw;
+}
+.wap-container #part3 .content .slide-container .slide-ctr {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -4vw;
+  text-align: center;
+}
+.wap-container #part3 .content .slide-container .slide-ctr i {
+  display: inline-block;
+  width: 2.1333vw;
+  height: 2.1333vw;
+  background: url(../img/part2_slide_default.png) center no-repeat;
+  cursor: pointer;
+}
+.wap-container #part3 .content .slide-container .slide-ctr .current {
+  background-image: url(../img/part3_slide_current.png);
+}
+.wap-container #part3 .content .slide-container .back-next {
+  position: absolute;
+  left: -7.7333vw;
+  bottom: 0;
+  width: 7.7333vw;
+  height: 14.2667vw;
+  background: url(../img/part3_btn_bg.png) center no-repeat;
+}
+.wap-container #part3 .content .slide-container .back-next .back,
+.wap-container #part3 .content .slide-container .back-next .next {
+  width: 100%;
+  height: 50%;
+  cursor: pointer;
+}
+.wap-container #part3 .content .slide-container .back-next .back {
+  background: url(../img/part3_slide_back.png) center no-repeat;
+}
+.wap-container #part3 .content .slide-container .back-next .next {
+  position: relative;
+  background: url(../img/part3_slide_next.png) center no-repeat;
+}
+.wap-container #part3 .content .slide-container .back-next .next::before {
+  content: "";
+  position: absolute;
+  border-width: 1px;
+  border-color: #ffffff;
+  border-style: solid;
+  opacity: 0.2;
+  left: 50%;
+  margin-left: -1.4667vw;
+  top: 0;
+  width: 2.9333vw;
+  height: 0;
+}
+.wap-container #part3 .content .select-container.nano {
+  overflow-y: auto;
+  float: right;
+  width: 48vw;
+  height: 100%;
+}
+.wap-container #part3 .content .select-container.nano .nano-pane {
+  left: 3px;
+  right: auto;
+  width: 1px;
+  background: #000;
+}
+.wap-container #part3 .content .select-container.nano .nano-slider {
+  left: -3px;
+  background: #000;
+  width: 6px;
+  height: 80px !important;
+  opacity: 1;
+  border-radius: 0;
+}
+.wap-container #part3 .content .select-container.nano .list {
+  left: 15px;
+}
+.wap-container #part3 .content .select-container.nano .list:focus {
+  outline: none;
+}
+.wap-container #part3 .content .select-container.nano .list .item {
+  padding-left: 5px;
+  line-height: 2.1;
+  color: #000;
+  font-size: 20px;
+  font-family: "YJcujihei";
+  font-weight: bold;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: pointer;
+}
+.wap-container #part3 .content .select-container.nano .list .item.current {
+  background: url(../img/part3_selected.png);
+}
+.wap-container #part4 {
+  position: relative;
+  width: 100vw;
+  height: 113.8667vw;
+  background: url(../img/part4_bg.png) center no-repeat;
+  background-size: 100%;
+}
+.wap-container #part4 .content {
+  position: absolute;
+  top: 32vw;
+  left: 50%;
+  margin-left: -42.0666vw;
+  width: 84.1333vw;
+  height: 65.8667vw;
+}
+.wap-container #part4 .content li {
+  height: 65.8667vw;
+}
+.wap-container #part4 .content li .left-content,
+.wap-container #part4 .content li .right-content {
+  position: relative;
+  float: left;
+  width: 39.7333vw;
+}
+.wap-container #part4 .content li .left-content .click_before,
+.wap-container #part4 .content li .right-content .click_before {
+  display: block;
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+.wap-container #part4 .content li .left-content .click_before .title,
+.wap-container #part4 .content li .right-content .click_before .title {
+  font-size: 20px;
+  color: #f7ca7f;
+  font-weight: bolder;
+  font-family: "YJcujihei";
+  line-height: 1.644;
+  text-align: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.wap-container #part4 .content li .left-content .click_after,
+.wap-container #part4 .content li .right-content .click_after {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  filter: alpha(opacity=50);
+  background-image: linear-gradient(rgba(255, 255, 255, 0), #cca169);
+}
+.wap-container #part4 .content li .left-content .click_after .info,
+.wap-container #part4 .content li .right-content .click_after .info {
+  position: absolute;
+  bottom: 0vw;
+  left: 0;
+  height: 100px;
+  width: 100%;
+}
+.wap-container #part4 .content li .left-content .click_after .info .title,
+.wap-container #part4 .content li .right-content .click_after .info .title {
+  margin-bottom: 5px;
+  font-size: 20px;
+  font-weight: bold;
+  font-family: "YJcujihei";
+  color: #000000;
+  line-height: 1.644;
+  text-align: center;
+}
+.wap-container #part4 .content li .left-content .click_after .info .text,
+.wap-container #part4 .content li .right-content .click_after .info .text {
+  margin: 5px;
+  font-size: 14px;
+  font-family: "FZLTHJW";
+  color: #000000;
+  font-weight: 600;
+  text-align: left;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  /*! autoprefixer: off */
+  -webkit-box-orient: vertical;
+}
+.wap-container #part4 .content li img {
+  width: 39.7333vw;
+  height: 65.8667vw;
+}
+.wap-container #part4 .content li .right-content {
+  margin-left: 4.6667vw;
+}
+.wap-container #part4 .content .back,
+.wap-container #part4 .content .next {
+  position: absolute;
+  top: 50%;
+  height: 5.7333vw;
+  width: 7.6vw;
+  margin-top: -2.8666vw;
+}
+.wap-container #part4 .content .back {
+  left: -6.111vw;
+  background: url(../img/back.png) no-repeat;
+  background-size: 100%;
+}
+.wap-container #part4 .content .next {
+  right: -6.111vw;
   background: url(../img/next.png) no-repeat;
   background-size: 100%;
 }
