--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -1,6 +1,6 @@
 body{overflow-x: hidden;min-height: 100vh;}
 .wap-container{
-    // background-image: url(../img/bg.png);
+    background-image: url(../img/bg.png);
     // height: 1000vh;
     .banner{
         height: 107.0667vw;           
@@ -11,7 +11,7 @@ body{overflow-x: hidden;min-height: 100vh;}
         overflow-x: auto;
         .nav-list{        
             position: relative;
-            width: 111.8vw;
+            width: 112vw;
             height: 8.2667vw;
             background: url(../img/nav_bg.png) repeat;
             overflow-x: auto;
@@ -113,5 +113,346 @@ body{overflow-x: hidden;min-height: 100vh;}
             }
         }
     }    
+    #part2{
+        position: relative;
+        width: 100vw;
+        height: 89.6vw;
+        background: url(../img/part2_bg.png) no-repeat;
+        background-size: 100%;
+        .content{
+            position: absolute;
+            top: 30.6667vw;
+            left: 2vw;
+            width: 96.4vw;
+            height: 53.5vw;
+            .slide-box{
+                width: 100%;
+                height: 100%;
+                ul{
+                    li{
+                        position: relative;
+                        width: 96.4vw;
+                        height: 53.5vw;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                        }
+                        .info{
+                            position: absolute;
+                            bottom: 5.3333vw;
+                            left: 50%;
+                            margin-left: -40vw;
+                            width: 80vw;
+                            height: 15.9333vw;
+                            background-image: url(../img/part2_text_bg.png);
+                            .title{
+                                padding: 2vw 2vw 1vw 2vw;
+                                height: 6vw;
+                                line-height: 6vw;
+                                font-size: 20px;
+                                font-weight: bolder;
+                                text-align: center;
+                            }
+                            .text{
+                                padding: 0 5vw;
+                                height: 6.3332vw;
+                                // line-height: 2;
+                                font-size: 16px;
+                                font-weight: 600;
+                                text-align: center;
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
+                            }
+                        }
+                    }
+                }
+            }
+            .back,
+            .next {
+                position: absolute;
+                top: 50%;
+                height: 5.7333vw;
+                width: 7.6vw;
+                margin-top: -2.8666vw;
+            }
+            .back {
+                left: -1.111vw;
+                background: url(../img/back.png) no-repeat;
+                background-size:100%;
+            }
+            .next {
+                right: -1.111vw;
+                background: url(../img/next.png) no-repeat;
+                background-size:100%;
+            }
+            .pc-slide-ctr {
+                width: 100%;
+                text-align: center;
+                padding-top: 4px;
+                font-size: 14px;
+                i {
+                   display: inline-block;
+                   width: 2.1333vw;
+                   height: 2.1333vw;
+                   background: url(../img/part2_slide_default.png) center no-repeat;
+                   cursor: pointer;
+               }
+               .current {
+                    background-image: url(../img/part2_slide_current.png);
+               }
+            }            
+        }
+    }
+    #part3{
+        position: relative;
+        width: 100vw;
+        height: 139.2vw;
+        background: url(../img/part3_bg.png) no-repeat;
+        background-size: 100%;
+        .content{
+            position: absolute;
+            top: 38.6667vw;
+            left: 8.6667vw;
+            width: 91.3333vw;
+            height: 75.3333vw;
+            .slide-container{
+                display: none;
+                float: left;
+                position: relative;
+                width: 39.6vw;
+                height: 75.4667vw;
+                &:nth-child(1){
+                    display: block;
+                }
+                .slide-box{
+                    height: 100%;
+                    ul{
+                        height: 100%;
+                    }
+                    .slide-div{
+                        width: 39.6vw;
+                        height: 75.4667vw;
+                        .slide-div-item{
+                            float: left;
+                            width: 39.6vw;
+                            height: 75.4667vw;
+                            a{
+                                display: inline-block;
+                                img{
+                                    width: 39.6vw;
+                                    height: 75.4667vw;
+                                }
+                            }
+                        }
+                    }
+                }
+                .slide-ctr {
+                    position: absolute;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    bottom: -4vw;
+                    text-align: center;
+                    i {
+                       display: inline-block;
+                       width: 2.1333vw;
+                       height: 2.1333vw;
+                       background: url(../img/part2_slide_default.png) center no-repeat;
+                       cursor: pointer;
+                   }
+                   .current {
+                        background-image: url(../img/part3_slide_current.png);
+                   }
+                }
+                .back-next{
+                    position: absolute;
+                    left: -7.7333vw;
+                    bottom: 0;
+                    width: 7.7333vw;
+                    height: 14.2667vw;
+                    background: url(../img/part3_btn_bg.png) center no-repeat;  
+                    .back,.next{
+                        width: 100%;
+                        height: 50%;
+                        cursor: pointer;
+                    }
+                    .back{
+                        background: url(../img/part3_slide_back.png) center no-repeat;  
+                    }
+                    .next{
+                        position: relative;
+                        background: url(../img/part3_slide_next.png) center no-repeat;                       
+                        &::before{
+                            content: "";
+                            position: absolute;
+                            border-width: 1px;
+                            border-color: rgb(255, 255, 255);
+                            border-style: solid;
+                            opacity: 0.2;
+                            left: 50%;
+                            margin-left: -1.4667vw;
+                            top: 0;
+                            width: 2.9333vw;
+                            height: 0;
+                          }                          
+                    }
+                }
+            }
+            .select-container.nano{
+                overflow-y: auto;
+                float: right;
+                width: 48vw;
+                height: 100%;
+                .nano-pane   { 
+                    left: 3px;
+                    right: auto;
+                    width: 1px; 
+                    background: #000;
+                }
+                // 滚动条滑块
+                .nano-slider { 
+                    left: -3px;
+                    background: #000;
+                    width: 6px;
+                    height: 80px !important;
+                    opacity: 1; 
+                    border-radius: 0;
+                }
+
+                .list{
+                    left: 15px;
+                    &:focus{
+                        outline: none;
+                    }
+                    .item{
+                        padding-left: 5px;
+                        line-height: 2.1;							  
+                        color: #000;
+                        font-size: 20px;
+                        font-family: "YJcujihei";
+                        font-weight: bold;
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        cursor: pointer;
+                    }
+                    .item.current{
+                        background: url(../img/part3_selected.png); 
+                    }
+                }
+            }
+        }
+    }
+    #part4{
+        position: relative;
+        width: 100vw;
+        height: 113.8667vw;
+        background: url(../img/part4_bg.png) center no-repeat;
+        background-size: 100%;
+        .content{
+            position: absolute;
+            top: 32vw;
+            left: 50%;
+            margin-left: -42.0666vw;
+            width: 84.1333vw;
+            height: 65.8667vw;
+            li{
+                height: 65.8667vw;
+                .left-content,.right-content{
+                    position: relative;
+                    float: left;
+                    width: 39.7333vw;
+                    .click_before{
+                        display: block;
+                        position: absolute;
+                        bottom: 20px;
+                        left: 0;
+                        width: 100%;
+                        text-align: center;
+                        // padding: 0 15px;
+                        .title{
+                            font-size: 20px;
+                            color: rgb(247, 202, 127);
+                            font-weight: bolder;
+                            font-family: "YJcujihei";
+                            line-height: 1.644;		
+                            text-align: center;
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            white-space: nowrap;	
+                        }
+                    }
+                    .click_after{
+                        display: none;
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        filter: Alpha(opacity=50);
+                        background-image: linear-gradient(rgba(255,255,255,0),rgba(204, 161, 105,1));
+                        .info{
+                            position: absolute;
+                            bottom: 0vw;
+                            left: 0;
+                            // padding: 0 15px;
+                            height: 100px;
+                            width: 100%;
+                            .title{
+                                margin-bottom: 5px;
+                                font-size: 20px;
+                                font-weight: bold;
+                                font-family: "YJcujihei";
+                                color: rgb(0, 0, 0);
+                                line-height: 1.644;		
+                                text-align: center;					  							  
+                            }
+                            .text{
+                                margin: 5px;
+                                font-size: 14px;
+                                font-family: "FZLTHJW";
+                                color: rgb(0, 0, 0);
+                                // line-height: 1.5;		
+                                font-weight: 600;	  
+                                overflow: hidden;
+                                text-align: left;
+                                text-overflow: ellipsis;
+                                display: -webkit-box;
+                                -webkit-line-clamp: 2;
+                                overflow:hidden;
+                                /*! autoprefixer: off */
+                                -webkit-box-orient: vertical;					  
+                            }
+                        }
+                    }
+                }
+                img{
+                    width: 39.7333vw;
+                    height: 65.8667vw;
+                }
+                .right-content{
+                    margin-left: 4.6667vw;
+                }
+            }
+            .back,
+            .next {
+                position: absolute;
+                top: 50%;
+                height: 5.7333vw;
+                width: 7.6vw;
+                margin-top: -2.8666vw;
+            }
+            .back {
+                left: -6.111vw;
+                background: url(../img/back.png) no-repeat;
+                background-size:100%;
+            }
+            .next {
+                right: -6.111vw;
+                background: url(../img/next.png) no-repeat;
+                background-size:100%;
+            }
+        }
+    }
 	#part1 .control,#part4 .control{display: none;}
 }
