--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -11,7 +11,7 @@ body{overflow-x: hidden;min-height: 100vh;}
         overflow-x: auto;
         .nav-list{        
             position: relative;
-            width: 120vw;
+            width: 115vw;
             height: 8.2667vw;
             background: url(../img/nav_bg.png) repeat;
             overflow-x: auto;
@@ -451,6 +451,53 @@ body{overflow-x: hidden;min-height: 100vh;}
                 right: -6.111vw;
                 background: url(../img/next.png) no-repeat;
                 background-size:100%;
+            }
+        }
+    }
+    #part5{
+        position: relative;
+        width: 100vw;
+        height: 135.2vw;
+        background: url(../img/part5_bg.png) center no-repeat;
+        background-size: 100%;
+        .big-pic{
+            position: absolute;
+            top: 33.3333vw;
+            left: 7.3333vw;
+            width: 48.6667vw;
+            height: 72.5333vw;
+            img{
+                width: 48.6667vw;
+                height: 72.5333vw;
+            }
+        }
+        .info{
+            position: absolute;
+            top: 33.3333vw;
+            right: 3.6vw;
+            width: 39.0667vw;
+            height: 84.6667vw;
+            .small-pic{
+                width: 301px;
+                height: 302px;
+                border-width: 15px;
+                border-image-source: url(../img/part5_pic_right_bg.png);
+                border-image-width: 15px;
+                border-image-slice: 15;
+                // background: url(../img/part5_pic_right_bg.png);
+                img{
+                    padding: 15px;
+                    margin-top: -1px;
+                    margin-left: -2px;
+                    width: 275px;
+                    height: 274px;
+                }
+            }
+            img{
+                margin-left: 3.4667vw;
+                margin-top: 7.3333vw;
+                width: 29.0667vw;
+                height: 29.2vw;
             }
         }
     }
