--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -10,22 +10,24 @@ body{overflow-x: hidden;min-height: 100vh;}
     .nav-wrap{
         overflow-x: auto;
         .nav-list{        
+            display: flex;
             position: relative;
-            width: 115vw;
+            // width: 115vw;
             height: 8.2667vw;
             background: url(../img/nav_bg.png) repeat;
             overflow-x: auto;
-            li {
+            .nav-item {
                 flex: 0 0 auto;
                 float: left;
                 padding: 0 3.3333vw;
                 height: 100%;
                 line-height: 8.2667vw;
+                // background: url(../img/时装周wap-发出-恢复的_07.png) repeat;
+                background-size: contain;
                 font-size: 3.7333vw;
                 color: #000;
                 font-weight: bolder;
                 user-select: none;
-                // -webkit-text-stroke: .8px #000;
             }    
             .nav-active {
                 color: #d2a75a;
@@ -186,7 +188,7 @@ body{overflow-x: hidden;min-height: 100vh;}
                 background: url(../img/next.png) no-repeat;
                 background-size:100%;
             }
-            .pc-slide-ctr {
+            .wap-slide-ctr {
                 width: 100%;
                 text-align: center;
                 padding-top: 4px;
@@ -460,46 +462,125 @@ body{overflow-x: hidden;min-height: 100vh;}
         height: 135.2vw;
         background: url(../img/part5_bg.png) center no-repeat;
         background-size: 100%;
-        .big-pic{
+        .slide-box{
             position: absolute;
             top: 33.3333vw;
             left: 7.3333vw;
-            width: 48.6667vw;
-            height: 72.5333vw;
-            img{
-                width: 48.6667vw;
-                height: 72.5333vw;
-            }
-        }
-        .info{
-            position: absolute;
-            top: 33.3333vw;
-            right: 3.6vw;
-            width: 39.0667vw;
             height: 84.6667vw;
-            .small-pic{
-                width: 301px;
-                height: 302px;
-                border-width: 15px;
-                border-image-source: url(../img/part5_pic_right_bg.png);
-                border-image-width: 15px;
-                border-image-slice: 15;
-                // background: url(../img/part5_pic_right_bg.png);
-                img{
-                    padding: 15px;
-                    margin-top: -1px;
-                    margin-left: -2px;
-                    width: 275px;
-                    height: 274px;
+            width: 89.3333vw;
+            ul{
+                height: 84.6667vw;
+                li{
+                    position: relative;
+                    height: 84.6667vw;
+                    width: 100%;
+                    .big-pic{
+                        width: 48.6667vw;
+                        height: 72.5333vw;
+                        img{
+                            width: 48.6667vw;
+                            height: 72.5333vw;
+                            object-fit:cover;
+                        }
+                    }
+                    .info{
+                        position: absolute;
+                        top: 0;
+                        right: 0.6667vw;
+                        width: 39.0667vw;
+                        height: 84.6667vw;
+                        .small-pic{
+                            position: relative;
+                            margin-left: 3.8667vw;
+                            margin-top: 6.6667vw;
+                            width: 29.0667vw;
+                            height: 29.2vw;
+                            .pic-border{
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 29.0667vw;
+                                height: 29.2vw;
+                                background-image: url(../img/part5_pic_right_bg.png);
+                                background-size: 100%;           
+                            }
+                            img{
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                margin-top: 1.7333vw;
+                                margin-left: 1.6vw;
+                                width: 25.7333vw;
+                                
+                                // height: 25.7333vw;
+                                height: 25.8667vw;
+                                object-fit:cover;
+                            }
+                        }
+                        .name{
+                            margin-top: 4.6667vw;
+                            margin-left: 3.8667vw;
+                            font-size: 3.2vw;
+                            font-weight: bolder;
+                        }
+                        .desc{
+                            margin: 4.6667vw 3.8667vw;
+                            font-size: 2.4vw;
+                            line-height: 1.75;
+                            font-weight: bolder;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            display: -webkit-box;
+                            -webkit-line-clamp: 6;  // 控制多行的行数
+                            -webkit-box-orient: vertical;            
+                        }
+                    }
                 }
             }
-            img{
-                margin-left: 3.4667vw;
-                margin-top: 7.3333vw;
-                width: 29.0667vw;
-                height: 29.2vw;
+            .back,
+            .next {
+                position: absolute;
+                top: 50%;
+                height: 5.7333vw;
+                width: 7.6vw;
+                margin-top: -2.8666vw;
             }
+            .back {
+                left: 0;
+                background: url(../img/part5_back.png) no-repeat;
+                background-size:100%;
+            }
+            .next {
+                right: 0;
+                background: url(../img/part5_next.png) no-repeat;
+                background-size:100%;
+            } 
         }
+        .wap-slide-ctr {
+            position: absolute;
+            bottom: 8vw;
+            width: 100%;
+            text-align: center;
+            padding-top: 4px;
+            font-size: 14px;
+            i {
+               display: inline-block;
+               width: 2.1333vw;
+               height: 2.1333vw;
+               background: url(../img/part2_slide_default.png) center no-repeat;
+               cursor: pointer;
+           }
+           .current {
+                background-image: url(../img/part2_slide_current.png);
+           }
+        }  
+    }
+    #team{
+        position: relative;
+        width: 100vw;
+        height: 19.7333vw;
+        background: url(../img/team_bg.png) center no-repeat;
+        background-size: 100%;
     }
 	#part1 .control,#part4 .control{display: none;}
 }
