--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -1,7 +1,3 @@
-body {
-  overflow-x: hidden;
-  min-height: 100vh;
-}
 .wap-container {
   background-image: url(../img/bg.png);
 }
@@ -24,7 +20,7 @@ body {
   flex: 0 0 auto;
   float: left;
   padding: 0 3.3333vw;
-  height: 100%;
+  height: 8.4vw;
   line-height: 8.2667vw;
   background-size: contain;
   font-size: 3.7333vw;
