--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -1,4 +1,4 @@
-body{overflow-x: hidden;min-height: 100vh;}
+// body{overflow-x: hidden;min-height: 100vh;}
 .wap-container{
     background-image: url(../img/bg.png);
     // height: 1000vh;
@@ -20,7 +20,7 @@ body{overflow-x: hidden;min-height: 100vh;}
                 flex: 0 0 auto;
                 float: left;
                 padding: 0 3.3333vw;
-                height: 100%;
+                height: 8.4vw;
                 line-height: 8.2667vw;
                 // background: url(../img/时装周wap-发出-恢复的_07.png) repeat;
                 background-size: contain;
