fix:导航栏背景溢出

--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -20,8 +20,8 @@
                 flex: 0 0 auto;
                 float: left;
                 padding: 0 3.3333vw;
-                height: 8.4vw;
-                line-height: 8.4vw;
+                height: 8.5333vw;
+                height: 8.2667vw;
                 // background: url(../img/时装周wap-发出-恢复的_07.png) repeat;
                 background-size: contain;
                 font-size: 3.7333vw;
@@ -32,6 +32,7 @@
             .nav-active {
                 color: #d2a75a;
                 background-color: #151515;
+                // background-color: #f66;
             }
         }
     }
