--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -21,7 +21,7 @@
   float: left;
   padding: 0 3.3333vw;
   height: 8.5333vw;
-  height: 8.2667vw;
+  line-height: 8.2667vw;
   background-size: contain;
   font-size: 3.7333vw;
   color: #000;
