--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -21,7 +21,7 @@
                 float: left;
                 padding: 0 3.3333vw;
                 height: 8.5333vw;
-                height: 8.2667vw;
+                line-height: 8.2667vw;
                 // background: url(../img/时装周wap-发出-恢复的_07.png) repeat;
                 background-size: contain;
                 font-size: 3.7333vw;
