fix:导航栏背景溢出

--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -28,6 +28,9 @@
   font-weight: bolder;
   user-select: none;
 }
+.wap-container .nav-wrap .nav-list .nav-item a {
+  color: inherit;
+}
 .wap-container .nav-wrap .nav-list .nav-active {
   color: #d2a75a;
   background-color: #151515;
