--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -28,6 +28,9 @@
                 color: #000;
                 font-weight: bolder;
                 user-select: none;
+                a{
+                    color: inherit;
+                }
             }    
             .nav-active {
                 color: #d2a75a;
