--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -8,20 +8,20 @@
 }
 .wap-container .nav-wrap {
   overflow-x: auto;
+  background: url(../img/nav_bg.png) repeat;
+  height: 8.2667vw;
 }
 .wap-container .nav-wrap .nav-list {
   display: flex;
   position: relative;
-  height: 8.2667vw;
-  background: url(../img/nav_bg.png) repeat;
+  height: 100%;
   overflow-x: auto;
 }
 .wap-container .nav-wrap .nav-list .nav-item {
   flex: 0 0 auto;
   float: left;
   padding: 0 3.3333vw;
-  height: 8.5333vw;
-  line-height: 8.2667vw;
+  height: 100%;
   background-size: contain;
   font-size: 3.7333vw;
   color: #000;
@@ -29,6 +29,11 @@
   user-select: none;
 }
 .wap-container .nav-wrap .nav-list .nav-item a {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
   color: inherit;
 }
 .wap-container .nav-wrap .nav-list .nav-active {
