--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -9,19 +9,20 @@
     }
     .nav-wrap{
         overflow-x: auto;
+        background: url(../img/nav_bg.png) repeat;
+        height: 8.2667vw;
         .nav-list{        
             display: flex;
             position: relative;
             // width: 115vw;
-            height: 8.2667vw;
-            background: url(../img/nav_bg.png) repeat;
+            height: 100%;
             overflow-x: auto;
             .nav-item {
                 flex: 0 0 auto;
                 float: left;
                 padding: 0 3.3333vw;
-                height: 8.5333vw;
-                line-height: 8.2667vw;
+                height: 100%;
+                // line-height: 8.2667vw;
                 // background: url(../img/时装周wap-发出-恢复的_07.png) repeat;
                 background-size: contain;
                 font-size: 3.7333vw;
@@ -29,6 +30,11 @@
                 font-weight: bolder;
                 user-select: none;
                 a{
+                    display: flex;
+                    align-items: center;
+                    width: 100%;
+                    height: 100%;
+                    vertical-align: middle;
                     color: inherit;
                 }
             }    
