--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -15,7 +15,7 @@
             display: flex;
             position: relative;
             // width: 115vw;
-            height: 100%;
+            height: 8.4vw;
             overflow-x: auto;
             .nav-item {
                 flex: 0 0 auto;
