fix:导航栏背景溢出

--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -8,6 +8,7 @@
 }
 .wap-container .nav-wrap {
   overflow-x: auto;
+  overflow-y: hidden;
   background: url(../img/nav_bg.png) repeat;
   height: 8.2667vw;
 }
