--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -9,6 +9,7 @@
     }
     .nav-wrap{
         overflow-x: auto;
+        overflow-y: hidden;
         background: url(../img/nav_bg.png) repeat;
         height: 8.2667vw;
         .nav-list{        
