fix:导航栏背景溢出

--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -17,6 +17,7 @@
   position: relative;
   height: 8.4vw;
   overflow-x: auto;
+  overflow-y: hidden;
 }
 .wap-container .nav-wrap .nav-list .nav-item {
   flex: 0 0 auto;
