--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -18,6 +18,7 @@
             // width: 115vw;
             height: 8.4vw;
             overflow-x: auto;
+            overflow-y: hidden;
             .nav-item {
                 flex: 0 0 auto;
                 float: left;
