--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -20,6 +20,7 @@
             overflow-x: auto;
             overflow-y: hidden;
             .nav-item {
+                overflow-y: hidden;
                 flex: 0 0 auto;
                 float: left;
                 padding: 0 3.3333vw;
@@ -32,6 +33,7 @@
                 font-weight: bolder;
                 user-select: none;
                 a{
+                    overflow-y: hidden;
                     display: flex;
                     align-items: center;
                     width: 100%;
