fix:导航栏背景溢出

--- a/WAP/css/index.css
+++ b/WAP/css/index.css
@@ -8,19 +8,17 @@
 }
 .wap-container .nav-wrap {
   overflow-x: auto;
-  overflow-y: hidden;
   background: url(../img/nav_bg.png) repeat;
   height: 8.2667vw;
+  user-select: none;
 }
 .wap-container .nav-wrap .nav-list {
   display: flex;
   position: relative;
   height: 8.4vw;
   overflow-x: auto;
-  overflow-y: hidden;
 }
 .wap-container .nav-wrap .nav-list .nav-item {
-  overflow-y: hidden;
   flex: 0 0 auto;
   float: left;
   padding: 0 3.3333vw;
@@ -32,7 +30,6 @@
   user-select: none;
 }
 .wap-container .nav-wrap .nav-list .nav-item a {
-  overflow-y: hidden;
   display: flex;
   align-items: center;
   width: 100%;
