--- a/WAP/css/index.less
+++ b/WAP/css/index.less
@@ -9,18 +9,19 @@
     }
     .nav-wrap{
         overflow-x: auto;
-        overflow-y: hidden;
+        // overflow-y: hidden;
         background: url(../img/nav_bg.png) repeat;
         height: 8.2667vw;
+        user-select: none;
         .nav-list{        
             display: flex;
             position: relative;
             // width: 115vw;
             height: 8.4vw;
             overflow-x: auto;
-            overflow-y: hidden;
+            // overflow-y: hidden;
             .nav-item {
-                overflow-y: hidden;
+                // overflow-y: hidden;
                 flex: 0 0 auto;
                 float: left;
                 padding: 0 3.3333vw;
@@ -33,7 +34,7 @@
                 font-weight: bolder;
                 user-select: none;
                 a{
-                    overflow-y: hidden;
+                    // overflow-y: hidden;
                     display: flex;
                     align-items: center;
                     width: 100%;
